--- a/src/Resources/config/doctrine/BaseFile.orm.yml
+++ b/src/Resources/config/doctrine/BaseFile.orm.yml
@@ -1,5 +1,5 @@
 AntonioTurdo\Bundle\FileBundle\Entity\BaseFile:
-    type: mappedSuperClass    
+    type: mappedSuperclass    
     fields:
         name:
             column: name
@@ -20,10 +20,6 @@ AntonioTurdo\Bundle\FileBundle\Entity\BaseFile:
             type: string
             length: 128
             nullable: false
-        binaryContent:
-            column: binary_content
-            type: blob
-            nullable: true
         createdAt:
             column: created_at
             type: datetime
